--- a/netbeans.apache.org/src/content/download/nb126/nb126.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb126/nb126.asciidoc
@@ -16,98 +16,92 @@
      specific language governing permissions and limitations
      under the License.
 ////
-= Apache NetBeans 12.6 Features
+////
+
+NOTE: 
+See https://www.apache.org/dev/release-download-pages.html 
+for important requirements for download pages for Apache projects.
+
+////
+= Downloading Apache NetBeans 12.6 
 :jbake-type: page_noaside
-:jbake-tags: 12.6 features
+:jbake-tags: download
 :jbake-status: published
-:keywords: Apache NetBeans 12.6 IDE features
-:icons: font
-:description: Apache NetBeans 12.6 features
+:keywords: Apache NetBeans 12.6 Download
+:description: Apache NetBeans 12.6 Download
 :toc: left
-:toc-title: 
-:toclevels: 4
-:syntax: true
-:source-highlighter: pygments
-:experimental:
-:linkattrs:
+:toc-title:
+:icons: font
 
-Welcome to Apache NetBeans 12.6!
+Apache NetBeans 12.6 was released on....  See link:/download/nb126/index.html[Apache NetBeans 12.6 Features] for a full list of features.
 
-link:/download/nb125/nb125.html[Download, role="button success"]
+////
+NOTE: It's mandatory to link to the source. It's optional to link to the binaries.
+NOTE: It's mandatory to link against https://www.apache.org for the sums & keys. https is recommended.
+NOTE: It's NOT recommended to link to github.
+////
+Apache NetBeans 12.6 is available for download from your closest Apache mirror.
 
-The full list of pull requests integrated in the 12.6 timeframe link:https://github.com/apache/netbeans/pulls?q=is%3Aclosed+milestone%3A12.5[is found here], while the highlights are listed below.
+- Binaries: 
+link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.5/netbeans-12.5-bin.zip[netbeans-12.5-bin.zip] (link:https://downloads.apache.org/netbeans/netbeans/12.5/netbeans-12.5-bin.zip.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.5/netbeans-12.5-bin.zip.asc[PGP ASC])
 
-== Java Enhancements
+- Installers:
+ 
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.5/Apache-NetBeans-12.5-bin-windows-x64.exe[Apache-NetBeans-12.5-bin-windows-x64.exe] (link:https://downloads.apache.org/netbeans/netbeans/12.5/Apache-NetBeans-12.5-bin-windows-x64.exe.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.5/Apache-NetBeans-12.5-bin-windows-x64.exe.asc[PGP ASC])
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.5/Apache-NetBeans-12.5-bin-linux-x64.sh[Apache-NetBeans-12.5-bin-linux-x64.sh] (link:https://downloads.apache.org/netbeans/netbeans/12.5/Apache-NetBeans-12.5-bin-linux-x64.sh.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.5/Apache-NetBeans-12.5-bin-linux-x64.sh.asc[PGP ASC])
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.5/Apache-NetBeans-12.5-bin-macosx.dmg[Apache-NetBeans-12.5-bin-macosx.dmg] (link:https://downloads.apache.org/netbeans/netbeans/12.5/Apache-NetBeans-12.5-bin-macosx.dmg.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.5/Apache-NetBeans-12.5-bin-macosx.dmg.asc[PGP ASC])
 
-=== Java
-- Temporarily allow setting of SecurityManager: https://github.com/apache/netbeans/pull/3003
-- [NETBEANS-5661] - Added regular expression window and hint: https://github.com/apache/netbeans/pull/2953
-- Prefer .class execution over .java if the class already exists: https://github.com/apache/netbeans/pull/3036
-- [NETBEANS-5801] - Add javadoc for JDK 18 early access: https://github.com/apache/netbeans/pull/3008
-- [NETBEANS-5704] when generating --patch-module option, also use the generated source roots. Java: https://github.com/apache/netbeans/pull/2977
-- [NETBEANS-5832] Fixing compilation of static initializer for vanilla indexing.: https://github.com/apache/netbeans/pull/3054
-- Adding declarative Java hints to the LSP server: https://github.com/apache/netbeans/pull/2905
+IMPORTANT: macOS versions prior to 10.14.4 require the link:https://support.apple.com/kb/dl1998?locale=en_US[Swift 5 Runtime] to be installed to launch Apache NetBeans 12.5.
 
-=== Gradle
-- Report progress from Gradle's CreateFromTemplateHandler Gradle LSP bug: https://github.com/apache/netbeans/pull/3044
-- Fixed source+javadoc Gradle download Gradle LSP bug: https://github.com/apache/netbeans/pull/3040
-- Source/javadoc attacher must report download actions as enabled. Gradle Java bug: https://github.com/apache/netbeans/pull/3029
-- Gradle Action Providers can disable an action. API Change Gradle enhancement: https://github.com/apache/netbeans/pull/3004
-- LSP server informs client about unsuccessful launch. Gradle LSP: https://github.com/apache/netbeans/pull/3006
-- Prevent deadlock - Workspace shared IO supports close on input stream. Gradle LSP: https://github.com/apache/netbeans/pull/3019
-- Support for configurations in Gradle Gradle LSP enhancement: https://github.com/apache/netbeans/pull/2969
-- [NETBEANS-5768] Recognize gradle projects with settings.gradle only file: https://github.com/apache/netbeans/pull/3028
-- [NETBEANS-2373] Better than nothing support for Gradle Distribution dirs Gradle: https://github.com/apache/netbeans/pull/2920
-- [NETBEANS-5668] Fix slipping <br/>-s in the Project Problem Dialog Gradle: https://github.com/apache/netbeans/pull/2944
-- [NETBEANS-4252] Added PathFinder to Gradle Build Scripts Node Gradle: https://github.com/apache/netbeans/pull/2933
+- Source: link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.5/netbeans-12.5-source.zip[netbeans-12.5-source.zip] (link:https://downloads.apache.org/netbeans/netbeans/12.5/netbeans-12.5-source.zip.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.5/netbeans-12.5-source.zip.asc[PGP ASC])
 
-=== Maven
-- Support for disabling actions in Maven (used by Micronaut) API Change Maven enhancement: https://github.com/apache/netbeans/pull/3016
-- [NETBEANS-5803] Handle Maven projects with https name space. Maven: https://github.com/apache/netbeans/pull/3012
-- [NETBEANS-5143] Fixes Maven web app twice deployment issue: https://github.com/apache/netbeans/pull/3005
+- Javadoc for this release is available at https://bits.netbeans.org/12.5/javadoc
 
-=== Micronaut
-- Support for Micronaut's automatic restarts (mn:run) for Maven API Change Java Maven enhancement: https://github.com/apache/netbeans/pull/2948
-- LSP: Provide hover information in Micronaut yaml files. LSP: https://github.com/apache/netbeans/pull/2955
-- Micronaut configuration completion and navigation improvements LSP: https://github.com/apache/netbeans/pull/2962
-- Micronaut: Allow for creating project on JDK 16.: https://github.com/apache/netbeans/pull/3058
+////
+NOTE: Using https below is highly recommended.
+////
+Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity]
+of the downloaded files using the PGP signatures (.asc file) or a hash (.sha512 files).
+The PGP keys used to sign this release are available link:https://downloads.apache.org/netbeans/KEYS[here].
 
-=== Payara
+Apache NetBeans can also be installed as a self-contained link:https://snapcraft.io/netbeans[snap package] on Linux.
 
-- Fixes fetching the Payara Server list in private network: https://github.com/apache/netbeans/pull/3018
+== Deployment Platforms
 
-== PHP Enhancements
-- [NETBEANS-5678] Use the URL of the forked repository of the Skeleton Generator: https://github.com/apache/netbeans/pull/3052
-- [NETBEANS-5719] Unused property hint is shown when the property is used as a constructor argument: https://github.com/apache/netbeans/pull/3065
-- [NETBEANS-5480] Add an option(system property) to disable the feature to fold PHP tags: https://github.com/apache/netbeans/pull/3069
+Apache NetBeans 12.5 runs on JDK LTS releases 8 and 11, with experimental support for JDK 17, i.e., the current JDK release at the time of this NetBeans release.
 
-== C/C++ Enhancements
-- Fixing newly created cpplite project, avoiding starting the C/C++ LSP server when the configuration is not readable: https://github.com/apache/netbeans/pull/2877
-- In cpplite project, when reading configuration, an empty string should not be considered a valid configuration: https://github.com/apache/netbeans/pull/2904
+TIP: The current JDKs have an issue on macOS Big Sur, that causes freezes on dialogs. That could be fixed by applying the workaround described at link:https://issues.apache.org/jira/browse/NETBEANS-5037?focusedCommentId=17234878&page=com.atlassian.jira.plugin.system.issuetabpanels%3Acomment-tabpanel#comment-17234878[NETBEANS-5037] .
 
-== Miscellaneous Enhancements
+== Building from Source
 
-=== General
-- LSP: Find usages should search also in project dependecies. LSP: https://github.com/apache/netbeans/pull/2950
-- [NETBEANS-5492] change test proxy connection url to apache: https://github.com/apache/netbeans/pull/2830
-- [NETBEANS-5698] Fix tabcontrol painting on MacOS retina displays (Aqua LAF): https://github.com/apache/netbeans/pull/2970
-- [NETBEANS-4953] Fixing handling of WSL-based URIs.: https://github.com/apache/netbeans/pull/2988
-- [NETBEANS-5673] Modernize tab controls in the Windows LAF: https://github.com/apache/netbeans/pull/2967
-- [NETBEANS-5697] Various other LAF/HiDPI improvements on Windows: https://github.com/apache/netbeans/pull/2965
-- [NETBEANS-5726] Fix JCheckboxMenuItem state for 'Show Editor Tooolbar': https://github.com/apache/netbeans/pull/2979
-- [NETBEANS-4150] added a KeyringProvider using libsecret for new versions of Gnome: https://github.com/apache/netbeans/pull/2906
+To build Apache NetBeans 12.5 from source you need:
 
-=== VSCode
-- Add Run with configuration into code lenses.: https://github.com/apache/netbeans/pull/2995
-- Completion provider for VS Code's launch.json.: https://github.com/apache/netbeans/pull/3025
-- Debugger attach needs to be initialized.: https://github.com/apache/netbeans/pull/2991
-- New from Template for VSCode.: https://github.com/apache/netbeans/pull/2882
-- Run/Debug single .java files outside of project in VSCode.: https://github.com/apache/netbeans/pull/2938
-- [NETBEANS-5346] Debugger attach in VSCode extension.: https://github.com/apache/netbeans/pull/2978
+. A distribution of OpenJDK 8 or 11.
+. Apache Ant 1.10 or greater (https://ant.apache.org).
 
-=== Libraries
-- [NETBEANS-5503] Update JUnit from 4.13.1 to 4.13.2 Upgrade Library: https://github.com/apache/netbeans/pull/2831
-- Upgrading Graal.js to 20.3 LTS version: https://github.com/apache/netbeans/pull/2707
-- [NETBEANS-3439] - Upgrade JavaCC from 3.2 to 7.0.5: https://github.com/apache/netbeans/pull/1662
-- Improving usability of New from Template in VSNetBeans.: https://github.com/apache/netbeans/pull/3010
-- Jakarta EE 9 GlassFish 6 Support: https://github.com/apache/netbeans/pull/2902
+Once you have everything installed then:
+
+1. Unzip link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.5/netbeans-12.5-source.zip[netbeans-12.5-source.zip]
+in a directory of your liking.
+
+[start=2]
+. `cd` to that directory, and then run `ant` to build the Apache NetBeans IDE.
+Once built you can run the IDE by typing `./nbbuild/netbeans/bin/netbeans`
+
+== Community Approval
+
+As in any other Apache Project, the Apache NetBeans Community approved this release
+through the following voting processes in our link:/community/mailing-lists.html[mailing lists]:
+
+- link:https://lists.apache.org/thread.html/re8449d3c7b5acef2ee95e72b62c28f06872768bac24df1cc809d87bf%40%3Cdev.netbeans.apache.org%3E[PMC vote]
+- link:https://lists.apache.org/thread.html/r4297450c16e67214b9a8ac7b94c09ae5e42866d92d10c02e17dc7ecb%40%3Cdev.netbeans.apache.org%3E[PMC vote result]
+
+== Earlier Releases
+
+Please visit the link:/download/index.html[Apache NetBeans Download page] for further details.
+
