--- a/netbeans.apache.org/src/content/download/nb126/nb126.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb126/nb126.asciidoc
@@ -43,24 +43,24 @@ NOTE: It's NOT recommended to link to github.
 Apache NetBeans 12.6 is available for download from your closest Apache mirror.
 
 - Binaries: 
-link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.5/netbeans-12.5-bin.zip[netbeans-12.5-bin.zip] (link:https://downloads.apache.org/netbeans/netbeans/12.5/netbeans-12.5-bin.zip.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans/12.5/netbeans-12.5-bin.zip.asc[PGP ASC])
+link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.6/netbeans-12.6-bin.zip[netbeans-12.6-bin.zip] (link:https://downloads.apache.org/netbeans/netbeans/12.6/netbeans-12.6-bin.zip.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.6/netbeans-12.6-bin.zip.asc[PGP ASC])
 
 - Installers:
  
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.5/Apache-NetBeans-12.5-bin-windows-x64.exe[Apache-NetBeans-12.5-bin-windows-x64.exe] (link:https://downloads.apache.org/netbeans/netbeans/12.5/Apache-NetBeans-12.5-bin-windows-x64.exe.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans/12.5/Apache-NetBeans-12.5-bin-windows-x64.exe.asc[PGP ASC])
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.5/Apache-NetBeans-12.5-bin-linux-x64.sh[Apache-NetBeans-12.5-bin-linux-x64.sh] (link:https://downloads.apache.org/netbeans/netbeans/12.5/Apache-NetBeans-12.5-bin-linux-x64.sh.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans/12.5/Apache-NetBeans-12.5-bin-linux-x64.sh.asc[PGP ASC])
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.5/Apache-NetBeans-12.5-bin-macosx.dmg[Apache-NetBeans-12.5-bin-macosx.dmg] (link:https://downloads.apache.org/netbeans/netbeans/12.5/Apache-NetBeans-12.5-bin-macosx.dmg.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans/12.5/Apache-NetBeans-12.5-bin-macosx.dmg.asc[PGP ASC])
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.6/Apache-NetBeans-12.6-bin-windows-x64.exe[Apache-NetBeans-12.6-bin-windows-x64.exe] (link:https://downloads.apache.org/netbeans/netbeans/12.6/Apache-NetBeans-12.6-bin-windows-x64.exe.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.6/Apache-NetBeans-12.6-bin-windows-x64.exe.asc[PGP ASC])
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.6/Apache-NetBeans-12.6-bin-linux-x64.sh[Apache-NetBeans-12.6-bin-linux-x64.sh] (link:https://downloads.apache.org/netbeans/netbeans/12.6/Apache-NetBeans-12.6-bin-linux-x64.sh.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.6/Apache-NetBeans-12.6-bin-linux-x64.sh.asc[PGP ASC])
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.6/Apache-NetBeans-12.6-bin-macosx.dmg[Apache-NetBeans-12.6-bin-macosx.dmg] (link:https://downloads.apache.org/netbeans/netbeans/12.6/Apache-NetBeans-12.6-bin-macosx.dmg.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.6/Apache-NetBeans-12.6-bin-macosx.dmg.asc[PGP ASC])
 
-IMPORTANT: macOS versions prior to 10.14.4 require the link:https://support.apple.com/kb/dl1998?locale=en_US[Swift 5 Runtime] to be installed to launch Apache NetBeans 12.5.
+IMPORTANT: macOS versions prior to 10.14.4 require the link:https://support.apple.com/kb/dl1998?locale=en_US[Swift 5 Runtime] to be installed to launch Apache NetBeans 12.6.
 
-- Source: link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.5/netbeans-12.5-source.zip[netbeans-12.5-source.zip] (link:https://downloads.apache.org/netbeans/netbeans/12.5/netbeans-12.5-source.zip.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans/12.5/netbeans-12.5-source.zip.asc[PGP ASC])
+- Source: link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.6/netbeans-12.6-source.zip[netbeans-12.6-source.zip] (link:https://downloads.apache.org/netbeans/netbeans/12.6/netbeans-12.6-source.zip.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.6/netbeans-12.6-source.zip.asc[PGP ASC])
 
-- Javadoc for this release is available at https://bits.netbeans.org/12.5/javadoc
+- Javadoc for this release is available at https://bits.netbeans.org/12.6/javadoc
 
 ////
 NOTE: Using https below is highly recommended.
@@ -73,13 +73,13 @@ Apache NetBeans can also be installed as a self-contained link:https://snapcraft
 
 == Deployment Platforms
 
-Apache NetBeans 12.5 runs on JDK LTS releases 8 and 11, with experimental support for JDK 17, i.e., the current JDK release at the time of this NetBeans release.
+Apache NetBeans 12.6 runs on JDK LTS releases 8 and 11, with experimental support for JDK 17, i.e., the current JDK release at the time of this NetBeans release.
 
 TIP: The current JDKs have an issue on macOS Big Sur, that causes freezes on dialogs. That could be fixed by applying the workaround described at link:https://issues.apache.org/jira/browse/NETBEANS-5037?focusedCommentId=17234878&page=com.atlassian.jira.plugin.system.issuetabpanels%3Acomment-tabpanel#comment-17234878[NETBEANS-5037] .
 
 == Building from Source
 
-To build Apache NetBeans 12.5 from source you need:
+To build Apache NetBeans 12.6 from source you need:
 
 . A distribution of OpenJDK 8 or 11.
 . Apache Ant 1.10 or greater (https://ant.apache.org).
@@ -98,8 +98,8 @@ Once built you can run the IDE by typing `./nbbuild/netbeans/bin/netbeans`
 As in any other Apache Project, the Apache NetBeans Community approved this release
 through the following voting processes in our link:/community/mailing-lists.html[mailing lists]:
 
-- link:https://lists.apache.org/thread.html/re8449d3c7b5acef2ee95e72b62c28f06872768bac24df1cc809d87bf%40%3Cdev.netbeans.apache.org%3E[PMC vote]
-- link:https://lists.apache.org/thread.html/r4297450c16e67214b9a8ac7b94c09ae5e42866d92d10c02e17dc7ecb%40%3Cdev.netbeans.apache.org%3E[PMC vote result]
+- link:https://lists.apache.org/thread/g1nmx58cdxd6z9lx3c2k2wco0hbhjl4w[PMC vote]
+- link:https://lists.apache.org/thread/zq91t76gyr12lphn9bd8typ49ygo2f0g[PMC vote result]
 
 == Earlier Releases
 
