--- a/netbeans.apache.org/src/content/download/nb126/nb126.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb126/nb126.asciidoc
@@ -33,7 +33,7 @@ for important requirements for download pages for Apache projects.
 :toc-title:
 :icons: font
 
-Apache NetBeans 12.6 was released on....  See link:/download/nb126/index.html[Apache NetBeans 12.6 Features] for a full list of features.
+Apache NetBeans 12.6 was released on November 29, 2021. See link:/download/nb126/index.html[Apache NetBeans 12.6 Features] for a full list of features.
 
 ////
 NOTE: It's mandatory to link to the source. It's optional to link to the binaries.
@@ -48,12 +48,12 @@ link:https://downloads.apache.org/netbeans/netbeans/12.6/netbeans-12.6-bin.zip.a
 
 - Installers:
  
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.6/Apache-NetBeans-12.6-bin-windows-x64.exe[Apache-NetBeans-12.6-bin-windows-x64.exe] (link:https://downloads.apache.org/netbeans/netbeans/12.6/Apache-NetBeans-12.6-bin-windows-x64.exe.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans/12.6/Apache-NetBeans-12.6-bin-windows-x64.exe.asc[PGP ASC])
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.6/Apache-NetBeans-12.6-bin-linux-x64.sh[Apache-NetBeans-12.6-bin-linux-x64.sh] (link:https://downloads.apache.org/netbeans/netbeans/12.6/Apache-NetBeans-12.6-bin-linux-x64.sh.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans/12.6/Apache-NetBeans-12.6-bin-linux-x64.sh.asc[PGP ASC])
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.6/Apache-NetBeans-12.6-bin-macosx.dmg[Apache-NetBeans-12.6-bin-macosx.dmg] (link:https://downloads.apache.org/netbeans/netbeans/12.6/Apache-NetBeans-12.6-bin-macosx.dmg.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans/12.6/Apache-NetBeans-12.6-bin-macosx.dmg.asc[PGP ASC])
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans-installers/12.6/Apache-NetBeans-12.6-bin-windows-x64.exe[Apache-NetBeans-12.6-bin-windows-x64.exe] (link:https://downloads.apache.org/netbeans/netbeans-installers/12.6/Apache-NetBeans-12.6-bin-windows-x64.exe.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans-installers/12.6/Apache-NetBeans-12.6-bin-windows-x64.exe.asc[PGP ASC])
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans-installers/12.6/Apache-NetBeans-12.6-bin-linux-x64.sh[Apache-NetBeans-12.6-bin-linux-x64.sh] (link:https://downloads.apache.org/netbeans/netbeans-installers/12.6/Apache-NetBeans-12.6-bin-linux-x64.sh.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans-installers/12.6/Apache-NetBeans-12.6-bin-linux-x64.sh.asc[PGP ASC])
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans-installers/12.6/Apache-NetBeans-12.6-bin-macosx.dmg[Apache-NetBeans-12.6-bin-macosx.dmg] (link:https://downloads.apache.org/netbeans/netbeans-installers/12.6/Apache-NetBeans-12.6-bin-macosx.dmg.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans-installers/12.6/Apache-NetBeans-12.6-bin-macosx.dmg.asc[PGP ASC])
 
 IMPORTANT: macOS versions prior to 10.14.4 require the link:https://support.apple.com/kb/dl1998?locale=en_US[Swift 5 Runtime] to be installed to launch Apache NetBeans 12.6.
 
