--- a/netbeans.apache.org/src/content/download/nb126/nb126.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb126/nb126.asciidoc
@@ -96,7 +96,7 @@ Once built you can run the IDE by typing `./nbbuild/netbeans/bin/netbeans`
 == Community Approval
 
 As in any other Apache Project, the Apache NetBeans Community approved this release
-through the following voting processes in our link:/community/mailing-lists.html[mailing lists]:
+through the following voting processes in our link:https://netbeans.apache.org/community/mailing-lists.html[mailing lists]:
 
 - link:https://lists.apache.org/thread/g1nmx58cdxd6z9lx3c2k2wco0hbhjl4w[PMC vote]
 - link:https://lists.apache.org/thread/zq91t76gyr12lphn9bd8typ49ygo2f0g[PMC vote result]
