--- a/netbeans.apache.org/src/content/download/nb126/nb126.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb126/nb126.asciidoc
@@ -103,5 +103,5 @@ through the following voting processes in our link:https://netbeans.apache.org/c
 
 == Earlier Releases
 
-Please visit the link:/download/index.html[Apache NetBeans Download page] for further details.
+Please visit the link:https://netbeans.apache.org/download/index.html[Apache NetBeans Download page] for further details.
 
