--- a/netbeans.apache.org/src/content/download/nb126/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb126/index.asciidoc
@@ -33,81 +33,149 @@
 
 Welcome to Apache NetBeans 12.6!
 
-link:/download/nb125/nb125.html[Download, role="button success"]
+link:/download/nb126/nb126.html[Download, role="button success"]
 
-The full list of pull requests integrated in the 12.6 timeframe link:https://github.com/apache/netbeans/pulls?q=is%3Aclosed+milestone%3A12.5[is found here], while the highlights are listed below.
+The full list of pull requests integrated in the 12.6 timeframe link:https://github.com/apache/netbeans/pulls?q=is%3Aclosed+milestone%3A12.6[is found here], while the highlights are listed below.
 
 == Java Enhancements
 
 === Java
-- Temporarily allow setting of SecurityManager: https://github.com/apache/netbeans/pull/3003
-- [NETBEANS-5661] - Added regular expression window and hint: https://github.com/apache/netbeans/pull/2953
-- Prefer .class execution over .java if the class already exists: https://github.com/apache/netbeans/pull/3036
-- [NETBEANS-5801] - Add javadoc for JDK 18 early access: https://github.com/apache/netbeans/pull/3008
-- [NETBEANS-5704] when generating --patch-module option, also use the generated source roots. Java: https://github.com/apache/netbeans/pull/2977
-- [NETBEANS-5832] Fixing compilation of static initializer for vanilla indexing.: https://github.com/apache/netbeans/pull/3054
-- Adding declarative Java hints to the LSP server: https://github.com/apache/netbeans/pull/2905
+- Auto completion for "record" is now prefix aware.:https://github.com/apache/netbeans/pull/3227
+- Add support for Pattern Matching for switch (Preview):https://github.com/apache/netbeans/pull/3007
+- When java.lang is not available, avoid throwing a FatalError: https://github.com/apache/netbeans/pull/2947
+- Java code completion should show effectivelly final variables for use from anonymous classes: https://github.com/apache/netbeans/pull/3106
+- Fixing TreeUtilities.pathFor in the presence of the synthetic 'value=' in annotations: https://github.com/apache/netbeans/pull/3103
+- Include URLs in Java code templates for easier customization: https://github.com/apache/netbeans/pull/3141
+- Improve wait condition for the test: both Lookup and configurations must change: https://github.com/apache/netbeans/pull/3140
+- General Availability for javadoc 17: https://github.com/apache/netbeans/pull/3222
+- CheckRegexp hint causes all lines with regexp shown with a warning: https://github.com/apache/netbeans/pull/3287
+- NoSuchMethodError thrown while applying CreateClassFix: https://github.com/apache/netbeans/pull/3199
+- Return a copy instead of cached array: https://github.com/apache/netbeans/pull/3163
 
 === Gradle
-- Report progress from Gradle's CreateFromTemplateHandler Gradle LSP bug: https://github.com/apache/netbeans/pull/3044
-- Fixed source+javadoc Gradle download Gradle LSP bug: https://github.com/apache/netbeans/pull/3040
-- Source/javadoc attacher must report download actions as enabled. Gradle Java bug: https://github.com/apache/netbeans/pull/3029
-- Gradle Action Providers can disable an action. API Change Gradle enhancement: https://github.com/apache/netbeans/pull/3004
-- LSP server informs client about unsuccessful launch. Gradle LSP: https://github.com/apache/netbeans/pull/3006
-- Prevent deadlock - Workspace shared IO supports close on input stream. Gradle LSP: https://github.com/apache/netbeans/pull/3019
-- Support for configurations in Gradle Gradle LSP enhancement: https://github.com/apache/netbeans/pull/2969
-- [NETBEANS-5768] Recognize gradle projects with settings.gradle only file: https://github.com/apache/netbeans/pull/3028
-- [NETBEANS-2373] Better than nothing support for Gradle Distribution dirs Gradle: https://github.com/apache/netbeans/pull/2920
-- [NETBEANS-5668] Fix slipping <br/>-s in the Project Problem Dialog Gradle: https://github.com/apache/netbeans/pull/2944
-- [NETBEANS-4252] Added PathFinder to Gradle Build Scripts Node Gradle: https://github.com/apache/netbeans/pull/2933
+
+- Bumped Gradle Tooling to 7.3 with Java 17 support: https://github.com/apache/netbeans/pull/3246
+- Gradle projects should recognize Kotlin source directories: https://github.com/apache/netbeans/pull/2541
+- Make Gradle Project test close connections to Gradle Daemon: https://github.com/apache/netbeans/pull/3193
+- Allow to use Gradle 7.2 distributions on JDK17: https://github.com/apache/netbeans/pull/3216
+- Prevent NPE form GradleDistributionManager: https://github.com/apache/netbeans/pull/3195
+- New Project wizard for Gradle should use gradle init: https://github.com/apache/netbeans/pull/3084
+- Updating the Java Frontend project template to work with Gradle 7.0: https://github.com/apache/netbeans/pull/3083
+- com.oracle.truffle.polyglot.LanguageCache$Loader is not found in newer GraalVMs: https://github.com/apache/netbeans/pull/3235
 
 === Maven
-- Support for disabling actions in Maven (used by Micronaut) API Change Maven enhancement: https://github.com/apache/netbeans/pull/3016
-- [NETBEANS-5803] Handle Maven projects with https name space. Maven: https://github.com/apache/netbeans/pull/3012
-- [NETBEANS-5143] Fixes Maven web app twice deployment issue: https://github.com/apache/netbeans/pull/3005
+- Support Maven Wrapper (mvnw) in projects: https://github.com/apache/netbeans/pull/3198
+- UTF-8 input is broken in Maven project: https://github.com/apache/netbeans/pull/3289
+- Maven looks for annotation processor classpath in compiler plugin's configuration: https://github.com/apache/netbeans/pull/3190
 
-=== Micronaut
-- Support for Micronaut's automatic restarts (mn:run) for Maven API Change Java Maven enhancement: https://github.com/apache/netbeans/pull/2948
-- LSP: Provide hover information in Micronaut yaml files. LSP: https://github.com/apache/netbeans/pull/2955
-- Micronaut configuration completion and navigation improvements LSP: https://github.com/apache/netbeans/pull/2962
-- Micronaut: Allow for creating project on JDK 16.: https://github.com/apache/netbeans/pull/3058
+=== Groovy
+- Cached Transformation Classloader, based on set of classpath roots: https://github.com/apache/netbeans/pull/3213
+- Use static type checking to attribute AST: https://github.com/apache/netbeans/pull/3125
+- Performance: groovy loads classes using FileSystems: https://github.com/apache/netbeans/pull/3165
+- Avoid ClassLoader resource lookups: https://github.com/apache/netbeans/pull/3175
+- Must reach ELEMENTS_RESOLVED before working with java els: https://github.com/apache/netbeans/pull/3184
+- Fix test failures in Groovy.editor https://github.com/apache/netbeans/pull/3197
+- Fix wrong Groovy version in ant library: https://github.com/apache/netbeans/pull/3247
 
-=== Payara
+=== Jakarta EE
+- Payara Server UI disabled on the failed startup: https://github.com/apache/netbeans/pull/3273
+- Add details for Glassfish 6.2.1 server and improve version detection: https://github.com/apache/netbeans/pull/3288
+- Fix test failures in 'j2ee.core': https://github.com/apache/netbeans/pull/3226
+- Java Maven Web Project not created properly: https://github.com/apache/netbeans/pull/3170
 
-- Fixes fetching the Payara Server list in private network: https://github.com/apache/netbeans/pull/3018
+== LSP
+- Use RequestProcessor to fix SecurityException:setContextClassLoader: https://github.com/apache/netbeans/pull/3082
+- Find tests on initial scan: https://github.com/apache/netbeans/pull/3093
+- Move refactoring added: https://github.com/apache/netbeans/pull/3123
+- Prevent from NPE when no NetBeans project is opened: https://github.com/apache/netbeans/pull/3120
+- Restart frame action implemented in the DAP: https://github.com/apache/netbeans/pull/3119
+- Eating VSCode own Dog Food: https://github.com/apache/netbeans/pull/3129
+- Show test results for MX projects: https://github.com/apache/netbeans/pull/3128
+- Extract Superclass and Extract Interface refactorings added: https://github.com/apache/netbeans/pull/3138
+- Client Improvements (Foldmanager, Performance): https://github.com/apache/netbeans/pull/3153
+- Proper handling of LSP logging breakpoints: https://github.com/apache/netbeans/pull/3150
+- Pull Up and Push Down refactorings added: https://github.com/apache/netbeans/pull/3149
+- By default build release-like version of .vsix: https://github.com/apache/netbeans/pull/3118
+- Various Surround With refactoring fixes: https://github.com/apache/netbeans/pull/3169
+- Surround With refactorings implemented: https://github.com/apache/netbeans/pull/3157
+- ChangeMethodParameters refactoring added: https://github.com/apache/netbeans/pull/3174
+- Do not persist breakpoints and watches when debugging through LSP server: https://github.com/apache/netbeans/pull/3182
+- Test results displayed using the new TestExplorer API: https://github.com/apache/netbeans/pull/3186
+- Various refactor bugfixes: https://github.com/apache/netbeans/pull/3196
+- Convert paths of external libraries when debugging through LSP.:https://github.com/apache/netbeans/pull/3214
+- Remove check that blows up when the LSP or DAP server is reset.:https://github.com/apache/netbeans/pull/3220
+- Enable Groovy by default in vscode and NBJLS.:https://github.com/apache/netbeans/pull/3225
+- Various Test Explorer fixes.:https://github.com/apache/netbeans/pull/3224
+- Code completion should auto import classes:https://github.com/apache/netbeans/pull/3237
+- Minor bug fixes: https://github.com/apache/netbeans/pull/3256
+
+== VS Code
+- Attach to a running Native Image: https://github.com/apache/netbeans/pull/3080
+- VSNetBeans 12.5.301 doc changes: https://github.com/apache/netbeans/pull/3243
+- Assure that the decorated ranges in editor do not disappear when editor visibility changes: https://github.com/apache/netbeans/pull/3261
+- Additional bugfix for #3223 :https://github.com/apache/netbeans/pull/3232
+- Handle dots in class name by treating the prefix as a package structure: https://github.com/apache/netbeans/pull/3223
+- CodeLens for Run/Debug main in Java Frontend Application: https://github.com/apache/netbeans/pull/3212
 
 == PHP Enhancements
-- [NETBEANS-5678] Use the URL of the forked repository of the Skeleton Generator: https://github.com/apache/netbeans/pull/3052
-- [NETBEANS-5719] Unused property hint is shown when the property is used as a constructor argument: https://github.com/apache/netbeans/pull/3065
-- [NETBEANS-5480] Add an option(system property) to disable the feature to fold PHP tags: https://github.com/apache/netbeans/pull/3069
+- PHP Template missing Namespace option: https://github.com/apache/netbeans/pull/3280
+- Avoid inserting use statements to an incorrect position: https://github.com/apache/netbeans/pull/3279
+- Use the refactoring feature for private members of trait instead of the instant renamer: https://github.com/apache/netbeans/pull/3257
+- Support PSR-12 valid formatting rules: https://github.com/apache/netbeans/pull/3254
+- Fix CC in a use declaration after a group use declaration: https://github.com/apache/netbeans/pull/3111
+- Don't check idekey for Xdebug: https://github.com/apache/netbeans/pull/3109
+
+== HTML Enhancements
+- SCSS improvements: https://github.com/apache/netbeans/pull/3092
+- Add the option for HTML palette completion: https://github.com/apache/netbeans/pull/3146
+- Selected range is ignored for CSS reformatting: https://github.com/apache/netbeans/pull/3202
 
 == C/C++ Enhancements
-- Fixing newly created cpplite project, avoiding starting the C/C++ LSP server when the configuration is not readable: https://github.com/apache/netbeans/pull/2877
-- In cpplite project, when reading configuration, an empty string should not be considered a valid configuration: https://github.com/apache/netbeans/pull/2904
+- Switch typescript and cpplite editors to multiviews: https://github.com/apache/netbeans/pull/3155
+- Prevent NullPointerException in CPP LanguageServerImpl: https://github.com/apache/netbeans/pull/3191
+
+== Debugger Enhancements
+- Performance optimizations to speed up remote debugging: https://github.com/apache/netbeans/pull/3204
+- Performance optimizations to speed up remote debugging: https://github.com/apache/netbeans/pull/3158
+- [NETBEANS-6123] Step and Continue after breakpoint suspends at wrong place after eval: https://github.com/apache/netbeans/pull/3236
+- [NETBEANS-6127] Do not parallelize notifyToBeResumedNoFire(), because it runs under a lock: https://github.com/apache/netbeans/pull/3244
+- The set of arguments and launcher arguments is corrected: https://github.com/apache/netbeans/pull/3238
+- Support of setting the current working directory and environment variables: https://github.com/apache/netbeans/pull/3180
+
+== Profiler Enhancements
+- Concentrating I/O access into JavaIoFile private class:https://github.com/apache/netbeans/pull/3159
+- Library to process Heap dumps without accessing java.io.File:https://github.com/apache/netbeans/pull/3148
+
+== Jackpot
+- Updated Collection.toArray() refactoring: https://github.com/apache/netbeans/pull/3166
+- Add Collection/Map.size() > 0 case to isEmpty() refactoring: https://github.com/apache/netbeans/pull/3164
+- Source version fix for java versions using the new scheme: https://github.com/apache/netbeans/pull/3176
+- Hint reload on save + run action registration + small cleanup: https://github.com/apache/netbeans/pull/3171
+- ConvertTextBlockToString warning should be a hint/suggestion: https://github.com/apache/netbeans/pull/3160
+
+== NetBeans Platform Enhancements
+- Improved YAML parser, now with error recovery: https://github.com/apache/netbeans/pull/3245
+- Fix lazy Node loading when switching from Children.LEAF to another Children instance: https://github.com/apache/netbeans/pull/1779
+- Switch Windows LAF to the now-standard "Segoe UI" font: https://github.com/apache/netbeans/pull/3114
+- Added `com.sun.java.swing.plaf.motif` to exported modules: https://github.com/apache/netbeans/pull/3194
+- Fix anti-aliasing and HiDPI scaling in the Test Results progress bar: https://github.com/apache/netbeans/pull/3203
+- Adding default java trust store to xml retriever: https://github.com/apache/netbeans/pull/3207
 
 == Miscellaneous Enhancements
+- Cleanup raw type warning: https://github.com/apache/netbeans/pull/3143
+- Cleanup Integer deprecation warnings: https://github.com/apache/netbeans/pull/3154
+- Cleanup SQLParser.java warning errors: https://github.com/apache/netbeans/pull/3177
+- Cleanup ArrayList warnings: https://github.com/apache/netbeans/pull/3185
+- Update javac.source to 1.8 from 1.5: https://github.com/apache/netbeans/pull/3217
+- Update eclipselink from 2.7.7 to 2.7.9: https://github.com/apache/netbeans/pull/3100
+- Update JavaFX to 17: https://github.com/apache/netbeans/pull/3179
+- Update JNA and JNA platform to 5.9.0: https://github.com/apache/netbeans/pull/3178
+- Update FlatLaf from 1.5 to 1.6.1: https://github.com/apache/netbeans/pull/3250
+- Fix RAT and (some) verify-all-libs-and-licenses errors and warnings: https://github.com/apache/netbeans/pull/3276
+- Cleanup warnings related to unreachable exception catches: https://github.com/apache/netbeans/pull/3126
+- Corrected some typo errors: https://github.com/apache/netbeans/pull/3133
+- Update test for layerbuilder: https://github.com/apache/netbeans/pull/3205
+- Installer jdk 11 fixes: https://github.com/apache/netbeans/pull/3272
+- Keep old plain for loops in NetBeans sources: https://github.com/apache/netbeans/pull/3130
+- Ant clean fix for javacc java file: https://github.com/apache/netbeans/pull/3187
 
-=== General
-- LSP: Find usages should search also in project dependecies. LSP: https://github.com/apache/netbeans/pull/2950
-- [NETBEANS-5492] change test proxy connection url to apache: https://github.com/apache/netbeans/pull/2830
-- [NETBEANS-5698] Fix tabcontrol painting on MacOS retina displays (Aqua LAF): https://github.com/apache/netbeans/pull/2970
-- [NETBEANS-4953] Fixing handling of WSL-based URIs.: https://github.com/apache/netbeans/pull/2988
-- [NETBEANS-5673] Modernize tab controls in the Windows LAF: https://github.com/apache/netbeans/pull/2967
-- [NETBEANS-5697] Various other LAF/HiDPI improvements on Windows: https://github.com/apache/netbeans/pull/2965
-- [NETBEANS-5726] Fix JCheckboxMenuItem state for 'Show Editor Tooolbar': https://github.com/apache/netbeans/pull/2979
-- [NETBEANS-4150] added a KeyringProvider using libsecret for new versions of Gnome: https://github.com/apache/netbeans/pull/2906
-
-=== VSCode
-- Add Run with configuration into code lenses.: https://github.com/apache/netbeans/pull/2995
-- Completion provider for VS Code's launch.json.: https://github.com/apache/netbeans/pull/3025
-- Debugger attach needs to be initialized.: https://github.com/apache/netbeans/pull/2991
-- New from Template for VSCode.: https://github.com/apache/netbeans/pull/2882
-- Run/Debug single .java files outside of project in VSCode.: https://github.com/apache/netbeans/pull/2938
-- [NETBEANS-5346] Debugger attach in VSCode extension.: https://github.com/apache/netbeans/pull/2978
-
-=== Libraries
-- [NETBEANS-5503] Update JUnit from 4.13.1 to 4.13.2 Upgrade Library: https://github.com/apache/netbeans/pull/2831
-- Upgrading Graal.js to 20.3 LTS version: https://github.com/apache/netbeans/pull/2707
-- [NETBEANS-3439] - Upgrade JavaCC from 3.2 to 7.0.5: https://github.com/apache/netbeans/pull/1662
-- Improving usability of New from Template in VSNetBeans.: https://github.com/apache/netbeans/pull/3010
-- Jakarta EE 9 GlassFish 6 Support: https://github.com/apache/netbeans/pull/2902
