--- a/netbeans.apache.org/src/content/download/nb126/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb126/index.asciidoc
@@ -39,8 +39,8 @@ The full list of pull requests integrated in the 12.6 timeframe link:https://git
 
 == Java Enhancements
 
-=== Java
-- Auto completion for "record" is now prefix aware.:https://github.com/apache/netbeans/pull/3227
+=== Java Editor
+- Auto completion for "record" is now prefix aware: https://github.com/apache/netbeans/pull/3227
 - Add support for Pattern Matching for switch (Preview):https://github.com/apache/netbeans/pull/3007
 - When java.lang is not available, avoid throwing a FatalError: https://github.com/apache/netbeans/pull/2947
 - Java code completion should show effectivelly final variables for use from anonymous classes: https://github.com/apache/netbeans/pull/3106
