--- a/netbeans.apache.org/src/content/download/nb126/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb126/index.asciidoc
@@ -102,11 +102,11 @@ The full list of pull requests integrated in the 12.6 timeframe link:https://git
 - Do not persist breakpoints and watches when debugging through LSP server: https://github.com/apache/netbeans/pull/3182
 - Test results displayed using the new TestExplorer API: https://github.com/apache/netbeans/pull/3186
 - Various refactor bugfixes: https://github.com/apache/netbeans/pull/3196
-- Convert paths of external libraries when debugging through LSP.:https://github.com/apache/netbeans/pull/3214
-- Remove check that blows up when the LSP or DAP server is reset.:https://github.com/apache/netbeans/pull/3220
-- Enable Groovy by default in vscode and NBJLS.:https://github.com/apache/netbeans/pull/3225
-- Various Test Explorer fixes.:https://github.com/apache/netbeans/pull/3224
-- Code completion should auto import classes:https://github.com/apache/netbeans/pull/3237
+- Convert paths of external libraries when debugging through LSP: https://github.com/apache/netbeans/pull/3214
+- Remove check that blows up when the LSP or DAP server is reset: https://github.com/apache/netbeans/pull/3220
+- Enable Groovy by default in vscode and NBJLS: https://github.com/apache/netbeans/pull/3225
+- Various Test Explorer fixes: https://github.com/apache/netbeans/pull/3224
+- Code completion should auto import classes: https://github.com/apache/netbeans/pull/3237
 - Minor bug fixes: https://github.com/apache/netbeans/pull/3256
 
 == VS Code
