--- a/netbeans.apache.org/src/content/download/nb126/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb126/index.asciidoc
@@ -61,7 +61,7 @@ The full list of pull requests integrated in the 12.6 timeframe link:https://git
 - Prevent NPE form GradleDistributionManager: https://github.com/apache/netbeans/pull/3195
 - New Project wizard for Gradle should use gradle init: https://github.com/apache/netbeans/pull/3084
 - Updating the Java Frontend project template to work with Gradle 7.0: https://github.com/apache/netbeans/pull/3083
-- com.oracle.truffle.polyglot.LanguageCache$Loader is not found in newer GraalVMs: https://github.com/apache/netbeans/pull/3235
+- LanguageCache$Loader is not found in newer GraalVMs: https://github.com/apache/netbeans/pull/3235
 
 === Maven
 - Support Maven Wrapper (mvnw) in projects: https://github.com/apache/netbeans/pull/3198
@@ -113,14 +113,14 @@ The full list of pull requests integrated in the 12.6 timeframe link:https://git
 - Attach to a running Native Image: https://github.com/apache/netbeans/pull/3080
 - VSNetBeans 12.5.301 doc changes: https://github.com/apache/netbeans/pull/3243
 - Assure that the decorated ranges in editor do not disappear when editor visibility changes: https://github.com/apache/netbeans/pull/3261
-- Additional bugfix for #3223 :https://github.com/apache/netbeans/pull/3232
+- Additional bugfix for #3223: https://github.com/apache/netbeans/pull/3232
 - Handle dots in class name by treating the prefix as a package structure: https://github.com/apache/netbeans/pull/3223
 - CodeLens for Run/Debug main in Java Frontend Application: https://github.com/apache/netbeans/pull/3212
 
 == PHP Enhancements
 - PHP Template missing Namespace option: https://github.com/apache/netbeans/pull/3280
 - Avoid inserting use statements to an incorrect position: https://github.com/apache/netbeans/pull/3279
-- Use the refactoring feature for private members of trait instead of the instant renamer: https://github.com/apache/netbeans/pull/3257
+- Use the refactoring feature for private members of trait: https://github.com/apache/netbeans/pull/3257
 - Support PSR-12 valid formatting rules: https://github.com/apache/netbeans/pull/3254
 - Fix CC in a use declaration after a group use declaration: https://github.com/apache/netbeans/pull/3111
 - Don't check idekey for Xdebug: https://github.com/apache/netbeans/pull/3109
@@ -137,8 +137,8 @@ The full list of pull requests integrated in the 12.6 timeframe link:https://git
 == Debugger Enhancements
 - Performance optimizations to speed up remote debugging: https://github.com/apache/netbeans/pull/3204
 - Performance optimizations to speed up remote debugging: https://github.com/apache/netbeans/pull/3158
-- [NETBEANS-6123] Step and Continue after breakpoint suspends at wrong place after eval: https://github.com/apache/netbeans/pull/3236
-- [NETBEANS-6127] Do not parallelize notifyToBeResumedNoFire(), because it runs under a lock: https://github.com/apache/netbeans/pull/3244
+- Step and Continue after breakpoint suspends at wrong place after eval: https://github.com/apache/netbeans/pull/3236
+- Do not parallelize notifyToBeResumedNoFire(): https://github.com/apache/netbeans/pull/3244
 - The set of arguments and launcher arguments is corrected: https://github.com/apache/netbeans/pull/3238
 - Support of setting the current working directory and environment variables: https://github.com/apache/netbeans/pull/3180
 
