Fix up archive links for NB 12.6 announcement; change banner link text.

--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -41,7 +41,7 @@ Apache NetBeans is released four times a year. For details, see link:https://cwi
 
 Latest version of the IDE, released on November 29, 2021.
 
-link:/download/nb126/index.html[Features, role="button"] link:/download/nb126/nb126.html[Download, role="button success"]
+link:/download/nb126/[Features, role="button"] link:/download/nb126/nb126.html[Download, role="button success"]
 
 == Older releases
 
