--- a/netbeans.apache.org/src/content/download/nb123/nb123.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb123/nb123.asciidoc
@@ -43,22 +43,22 @@ NOTE: It's NOT recommended to link to github.
 Apache NetBeans 12.3 is available for download from your closest Apache mirror.
 
 - Binaries: 
-link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.3/netbeans-12.3-bin.zip[netbeans-12.3-bin.zip] (link:https://downloads.apache.org/netbeans/netbeans/12.3/netbeans-12.3-bin.zip.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans/12.3/netbeans-12.3-bin.zip.asc[PGP ASC])
+link:https://archive.apache.org/dist/netbeans/netbeans/12.3/netbeans-12.3-bin.zip[netbeans-12.3-bin.zip] (link:https://archive.apache.org/dist/netbeans/netbeans/12.3/netbeans-12.3-bin.zip.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/12.3/netbeans-12.3-bin.zip.asc[PGP ASC])
 
 - Installers:
  
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.3/Apache-NetBeans-12.3-bin-windows-x64.exe[Apache-NetBeans-12.3-bin-windows-x64.exe] (link:https://downloads.apache.org/netbeans/netbeans/12.3/Apache-NetBeans-12.3-bin-windows-x64.exe.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans/12.3/Apache-NetBeans-12.3-bin-windows-x64.exe.asc[PGP ASC])
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.3/Apache-NetBeans-12.3-bin-linux-x64.sh[Apache-NetBeans-12.3-bin-linux-x64.sh] (link:https://downloads.apache.org/netbeans/netbeans/12.3/Apache-NetBeans-12.3-bin-linux-x64.sh.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans/12.3/Apache-NetBeans-12.3-bin-linux-x64.sh.asc[PGP ASC])
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.3/Apache-NetBeans-12.3-bin-macosx.dmg[Apache-NetBeans-12.3-bin-macosx.dmg] (link:https://downloads.apache.org/netbeans/netbeans/12.3/Apache-NetBeans-12.3-bin-macosx.dmg.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans/12.3/Apache-NetBeans-12.3-bin-macosx.dmg.asc[PGP ASC])
+* link:https://archive.apache.org/dist/netbeans/netbeans/12.3/Apache-NetBeans-12.3-bin-windows-x64.exe[Apache-NetBeans-12.3-bin-windows-x64.exe] (link:https://archive.apache.org/dist/netbeans/netbeans/12.3/Apache-NetBeans-12.3-bin-windows-x64.exe.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/12.3/Apache-NetBeans-12.3-bin-windows-x64.exe.asc[PGP ASC])
+* link:https://archive.apache.org/dist/netbeans/netbeans/12.3/Apache-NetBeans-12.3-bin-linux-x64.sh[Apache-NetBeans-12.3-bin-linux-x64.sh] (link:https://archive.apache.org/dist/netbeans/netbeans/12.3/Apache-NetBeans-12.3-bin-linux-x64.sh.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/12.3/Apache-NetBeans-12.3-bin-linux-x64.sh.asc[PGP ASC])
+* link:https://archive.apache.org/dist/netbeans/netbeans/12.3/Apache-NetBeans-12.3-bin-macosx.dmg[Apache-NetBeans-12.3-bin-macosx.dmg] (link:https://archive.apache.org/dist/netbeans/netbeans/12.3/Apache-NetBeans-12.3-bin-macosx.dmg.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/12.3/Apache-NetBeans-12.3-bin-macosx.dmg.asc[PGP ASC])
 
 IMPORTANT: macOS versions prior to 10.14.4 require the link:https://support.apple.com/kb/dl1998?locale=en_US[Swift 5 Runtime] to be installed to launch Apache NetBeans 12.3.
 
-- Source: link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.3/netbeans-12.3-source.zip[netbeans-12.3-source.zip] (link:https://downloads.apache.org/netbeans/netbeans/12.3/netbeans-12.3-source.zip.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans/12.3/netbeans-12.3-source.zip.asc[PGP ASC])
+- Source: link:https://archive.apache.org/dist/netbeans/netbeans/12.3/netbeans-12.3-source.zip[netbeans-12.3-source.zip] (link:https://archive.apache.org/dist/netbeans/netbeans/12.3/netbeans-12.3-source.zip.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/12.3/netbeans-12.3-source.zip.asc[PGP ASC])
 
 - Javadoc for this release is available at https://bits.netbeans.org/12.3/javadoc
 
@@ -87,7 +87,7 @@ To build Apache NetBeans 12.3 from source you need:
 
 Once you have everything installed then:
 
-1. Unzip link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.3/netbeans-12.3-source.zip[netbeans-12.3-source.zip]
+1. Unzip link:https://archive.apache.org/dist/netbeans/netbeans/12.3/netbeans-12.3-source.zip[netbeans-12.3-source.zip]
 in a directory of your liking.
 
 [start=2]
