--- a/netbeans.apache.org/src/content/download/nb120/nb120.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/nb120.asciidoc
@@ -46,21 +46,21 @@ NOTE: It's NOT recommended to link to github.
 Apache NetBeans 12.0 is available for download from your closest Apache mirror.
 
 - Binaries: 
-link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.0/netbeans-12.0-bin.zip[netbeans-12.0-bin.zip] (link:https://downloads.apache.org/netbeans/netbeans/12.0/netbeans-12.0-bin.zip.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans/12.0/netbeans-12.0-bin.zip.asc[PGP ASC])
+link:https://archive.apache.org/dist/netbeans/netbeans/12.0/netbeans-12.0-bin.zip[netbeans-12.0-bin.zip] (link:https://archive.apache.org/dist/netbeans/netbeans/12.0/netbeans-12.0-bin.zip.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/12.0/netbeans-12.0-bin.zip.asc[PGP ASC])
 
-- Source: link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.0/netbeans-12.0-source.zip[netbeans-12.0-source.zip] 
-(link:https://downloads.apache.org/netbeans/netbeans/12.0/netbeans-12.0-source.zip.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans/12.0/netbeans-12.0-source.zip.asc[PGP ASC])
+- Source: link:https://archive.apache.org/dist/netbeans/netbeans/12.0/netbeans-12.0-source.zip[netbeans-12.0-source.zip] 
+(link:https://archive.apache.org/dist/netbeans/netbeans/12.0/netbeans-12.0-source.zip.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/12.0/netbeans-12.0-source.zip.asc[PGP ASC])
 
 - Installers: 
 
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-windows-x64.exe[Apache-NetBeans-12.0-bin-windows-x64.exe] (link:https://downloads.apache.org/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-windows-x64.exe.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-windows-x64.exe.asc[PGP ASC])
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-linux-x64.sh[Apache-NetBeans-12.0-bin-linux-x64.sh] (link:https://downloads.apache.org/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-linux-x64.sh.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-linux-x64.sh.asc[PGP ASC])
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-macosx.dmg[Apache-NetBeans-12.0-bin-macosx.dmg] (link:https://downloads.apache.org/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-macosx.dmg.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-macosx.dmg.asc[PGP ASC])
+* link:https://archive.apache.org/dist/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-windows-x64.exe[Apache-NetBeans-12.0-bin-windows-x64.exe] (link:https://archive.apache.org/dist/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-windows-x64.exe.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-windows-x64.exe.asc[PGP ASC])
+* link:https://archive.apache.org/dist/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-linux-x64.sh[Apache-NetBeans-12.0-bin-linux-x64.sh] (link:https://archive.apache.org/dist/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-linux-x64.sh.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-linux-x64.sh.asc[PGP ASC])
+* link:https://archive.apache.org/dist/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-macosx.dmg[Apache-NetBeans-12.0-bin-macosx.dmg] (link:https://archive.apache.org/dist/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-macosx.dmg.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-macosx.dmg.asc[PGP ASC])
 
 - Javadoc for this release is available at https://bits.netbeans.org/12.0/javadoc
 
