--- a/netbeans.apache.org/src/content/download/nb126/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb126/index.asciidoc
@@ -40,6 +40,7 @@ The full list of pull requests integrated in the 12.6 timeframe link:https://git
 == Java Enhancements
 
 === Java Editor
+- nbjavac-upgrade-to-jdk-17: https://github.com/apache/netbeans/pull/3112
 - Auto completion for "record" is now prefix aware: https://github.com/apache/netbeans/pull/3227
 - Add support for Pattern Matching for switch (Preview): https://github.com/apache/netbeans/pull/3007
 - When java.lang is not available, avoid throwing a FatalError: https://github.com/apache/netbeans/pull/2947
