--- a/netbeans.apache.org/src/content/participate/report-issue.asciidoc
+++ b/netbeans.apache.org/src/content/participate/report-issue.asciidoc
@@ -20,16 +20,19 @@
 :jbake-type: page
 :jbake-tags: community
 :jbake-status: published
-:keywords: Apache NetBeans JIRA issue report
+:keywords: Apache NetBeans issue report
 :description: Apache NetBeans Reporting Issues
 
-If you have found a bug in the application, please help Apache NetBeans by reporting this problem to our bug tracking system. Click View Data button, copy the exception and submit it together with detailed information about what you were trying to achieve before the problem occurred. NetBeans uses the link:https://issues.apache.org/jira/projects/NETBEANS/issues[JIRA] issue tracking system; you must have a login to file a new issue. Just click "Log In" in the upper-right of the page to create one. Once you are logged in, you will see a red "Create" button at the top of the page.
+If you have found a bug in the application, please help Apache NetBeans by reporting this problem
+to link:https://github.com/apache/netbeans/issues[our issue tracking on GitHub].
 
 Thank you for helping us make Apache NetBeans better!
 
 == Note
 
-Please provide the following information to reproduce your issues when you submit them.
+Please make sure the issue can be replicated with the latest Apache NetBeans release,
+and has not already been reported. Provide enough information for someone to be able
+to reproduce the problem. Sufficient information might include -
 
 - Example code (Attachments or Description)
 - Example project (Attachments)
@@ -37,9 +40,8 @@ Please provide the following information to reproduce your issues when you submi
 - Exact steps e.g. 1. Create an empty project, 2. Write the following code, 3. Something... (Description)
 - Actual results (Description)
 - Expected results (Description)
-- NetBeans version (Affects Version/s)
 - JDK version (Environment)
 - OS (Environment)
 
-link:https://issues.apache.org/jira/projects/NETBEANS/issues[Open JIRA, role="button success"]
+link:https://github.com/apache/netbeans/issues[Report issue, role="button success"]
 
