--- a/netbeans.apache.org/src/content/participate/submit-pr.asciidoc
+++ b/netbeans.apache.org/src/content/participate/submit-pr.asciidoc
@@ -34,7 +34,7 @@ We follow link:https://www.apache.org/foundation/policies/conduct.html[the Apach
 
 We appreciate new contributors to adhere to the following guidelines, to make things easier for all of us:
 
-. Before starting to code, it is a good practice to open an issue (PTR) first in our link:https://issues.apache.org/jira/projects/NETBEANS/summary[JIRA] instance, and discuss the problem in the developer mailing list (see link:/community/mailing-lists.html[mailing lists]), giving the reason for submitting your pull request so that it is clear and more experienced members can suggest appropriate solutions/ideas.  
+. Before starting to code, you may want to discuss the problem in the developer mailing list (see link:/community/mailing-lists.html[mailing lists]), giving the reason for submitting your pull request so that it is clear and more experienced members can suggest appropriate solutions/ideas.
 . All commits must include the author's full name and email address. For *important modifications* you will need to submit an link:https://www.apache.org/licenses/icla.pdf[Individual Contributor License Agreement (ICLA)].
 . All new files must include the Apache Software Foundation license header. See any NetBeans source code in case of doubt.
 . All commits must contain a meaningful commit message.
@@ -111,7 +111,7 @@ Before you can start modifying or upgrading the NetBeans code in your repository
 . Change to the `master` branch with `git checkout master`.
 . Create a branch with `git checkout -b mybranch` (or, using two commands: `git branch mybranch` and `git checkout mybranch`).
 
-You are now ready to start modifying the NetBeans code. Use `git commit` when appropriate. Note that the commit message related to JIRA issues must start with `[NETBEANS-<issue number>]`.
+You are now ready to start modifying the NetBeans code. Use `git commit` when appropriate.
 
 - Use `git push -u origin mybranch` to create and push the `mybranch` branch in your GitHub fork. 
 - Use `git push origin mybranch` afterwards.
@@ -206,7 +206,7 @@ Donator can use pull request as show above. (squashed for having a better readab
 
 In order to accept a donation the Apache NetBeans PMC should do a vote to accept the intention of donation.
 
-PMC will have to setup a form to append the list at https://incubator.apache.org/ip-clearance/ and open a JIRA issue to track donation.
+PMC will have to setup a form to append the list at https://incubator.apache.org/ip-clearance/ and open an issue to track donation.
 
 Donator must ensure that the following step are ok (PMC member need to check): 
 
