Archiving links to 12.6

--- a/netbeans.apache.org/src/content/download/archive/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/archive/index.asciidoc
@@ -29,6 +29,12 @@
 Older Apache NetBeans releases and pre-Apache NetBeans releases can still be
 downloaded, but are no longer supported.
 
+== Apache NetBeans 12.6
+
+Apache NetBeans 12.6 was released on November 29, 2021.
+
+link:/download/nb126/[Features, role="button"] link:/download/nb126/nb126.html[Download, role="button success"]
+
 == Apache NetBeans 12.5
 
 Apache NetBeans 12.5 was released on September 13, 2021.
