--- a/netbeans.apache.org/src/content/download/nb13/nb13.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb13/nb13.asciidoc
@@ -33,7 +33,7 @@ for important requirements for download pages for Apache projects.
 :toc-title:
 :icons: font
 
-Apache NetBeans 13 was released on March 4, 2022.
+Apache NetBeans 13 was released on March 4, 2022. See link:/download/nb13/index.html[Apache NetBeans 13 Features] for a full list of features.
 
 ////
 NOTE: It's mandatory to link to the source. It's optional to link to the binaries.
@@ -57,8 +57,6 @@ IMPORTANT: macOS installer is in progress, not available for release yet.
 
 - Source: link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/13/netbeans-13-source.zip[netbeans-13-source.zip] (link:https://downloads.apache.org/netbeans/netbeans/13/netbeans-13-source.zip.sha512[SHA-512],
 link:https://downloads.apache.org/netbeans/netbeans/13/netbeans-13-source.zip.asc[PGP ASC])
-
-- Javadoc for this release is available at https://bits.netbeans.org/13/javadoc
 
 ////
 NOTE: Using https below is highly recommended.
