--- a/netbeans.apache.org/src/content/download/nb13/nb13.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb13/nb13.asciidoc
@@ -53,7 +53,7 @@ link:https://downloads.apache.org/netbeans/netbeans-installers/13/Apache-NetBean
 * link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans-installers/13/Apache-NetBeans-13-bin-linux-x64.sh[Apache-NetBeans-13-bin-linux-x64.sh] (link:https://downloads.apache.org/netbeans/netbeans-installers/13/Apache-NetBeans-13-bin-linux-x64.sh.sha512[SHA-512],
 link:https://downloads.apache.org/netbeans/netbeans-installers/13/Apache-NetBeans-13-bin-linux-x64.sh.asc[PGP ASC])
 
-IMPORTANT: macOS installer is in progress, not available for release yet.
+IMPORTANT: macOS installer is in progress, not available for release yet. In the meantime, you're advised to unzip the binary ZIP listed above.
 
 - Source: link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/13/netbeans-13-source.zip[netbeans-13-source.zip] (link:https://downloads.apache.org/netbeans/netbeans/13/netbeans-13-source.zip.sha512[SHA-512],
 link:https://downloads.apache.org/netbeans/netbeans/13/netbeans-13-source.zip.asc[PGP ASC])
