--- a/netbeans.apache.org/src/content/download/nb13/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb13/index.asciidoc
@@ -35,7 +35,7 @@ Welcome to Apache NetBeans 13!
 
 link:/download/nb13/nb13.html[Download, role="button success"]
 
-The full list of pull requests integrated in the 13 timeframe link:https://github.com/apache/netbeans/pulls?q=is%3Aclosed+milestone%3ANB13[is found here], while the highlights are listed below.
+Note: The full list of pull requests integrated in the 13 timeframe link:https://github.com/apache/netbeans/pulls?q=is%3Aclosed+milestone%3ANB13[is found here], while they are listed by category below.
 
 == Java
  - fixed wrong nb-javac module name so that it can be installed. [link:https://github.com/apache/netbeans/issues/3575[3575]]
